style.css
body{
	background-color: rgb(0, 21, 48);
	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.logo{
	height:5rem;
}

.header {
	display: flex;
	align-items:center;
	justify-content: space-between;
	padding: 7px;
	margin-right: 10rem;
	margin-left: 10rem;
}

.navbar {
	display:flex;
	justify-content: space-between;
	gap:50px;
	align-items: flex-end;
}

.navbar>a{
	text-decoration: none;
	color:whitesmoke;
	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
	font-weight: 600;
	font-size: medium;
}

.section1{
	display:grid;
	grid-template-columns: 2fr 1fr;
	margin-left: 10rem;
	margin-right: 10rem;
	justify-content: space-between;
	align-items: center;
	padding-top:2rem;
}

.changing_text{
	margin-right: 5rem;
	padding:2rem;
	display:flex;
	flex-direction: column;
	justify-content: center;
	align-items: flex-start;
	gap: 2rem;
}

span {
	color:#0ec9ac;
}
.maintext{
	font-size: 3rem;
	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
	color:whitesmoke;
}

.subtext{
	color:grey;
	font-size: 1rem;
	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.btn{
	background-color: #0ec9ac;
	color:whitesmoke;
	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
	font-weight:600;
	font-size: large;
	border-radius: 0.5rem;
	padding-left: 50px;
	padding-right: 50px;
	padding-top: 20px;
	padding-bottom: 20px;
	border: none;
}

.section2{
	margin-left: 10rem;
	margin-right: 10rem;
	padding: 2rem;
}

.cards {
	display:flex;
	margin-top:3rem;
	color:whitesmoke;
	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
	font-size:large;
	gap: 3rem;
	justify-content: space-between;
	align-items: center;
}

.card{
	padding:1rem;
	background-color: rgba(0, 28, 63, 0.7);
	border-radius: 15px;
	padding:2rem;
}

.icon {
	height:3rem;
	width:3rem;
}

.icon_heading{
	display: flex;
	gap: 1rem;
	justify-content: flex-start;
	align-items:center;
}

.section3 {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	padding: 100px;
}

#company_logos{
	display:flex;
	gap:100px;
	padding: 20px;
	justify-content: space-between;
	margin-top: 20px;
}

.sub_heading{
	font-size: 2rem;
	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
	color:whitesmoke;
}

